@@ -1,2 +1,2 @@
-EBUILD java-config-2.1.9999.ebuild 1521 RMD160 474afe3f82d05b52bbade143b8c28b45118f5652 SHA1 60f1a2dc51244cba59761e0279f5dbc5fb84893c SHA256 53787d64372c66e221370a98b08b4a9201b20193d63451077a594556b8bee2d9
-MISC ChangeLog 363 RMD160 870461b10cf4d0172157b9ba4d8acbe98f05292e SHA1 94fd8d8c9dd11aed5cba7032622b9f7be6d84ebe SHA256 a65e110b1925b80f936d2ede38297745a0fc35b951069f6ab1b16a881135f1e9
+EBUILD java-config-2.1.9999.ebuild 1516 RMD160 89f2d48da3366cd610409e4a9ef41b1a1c407a66 SHA1 afb492beed3250c711ece30a68a7471c156c524a SHA256 2227be28c4508b667d69946046c49a03ab62bad5b41eb79399b38310783e45a9
+MISC ChangeLog 555 RMD160 5df16e01a29c37763a8faeaeab1e63bc1dff278d SHA1 49aa5bf05f0d9db6a65c070aaa5371c8b4441ea1 SHA256 62409edf6683a52edfdd4b7212eed3b0ea89b60a0c640bb580988eb168071842
