@@ -1,6 +1,11 @@
 # ChangeLog for dev-java/java-config
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  11 Feb 2008; Petteri Räty <betelgeuse@gentoo.org>
+  java-config-2.1.9999.ebuild:
+  Add needed cache generation function calls for installing .desktop files and
+  icons for Java Web Start.
 
   07 Dec 2007; Petteri Räty <betelgeuse@gentoo.org>
   -java-config-2.0.9999.ebuild:
